--- a/src/app/user-components/category-products/category-products.component.html
+++ b/src/app/user-components/category-products/category-products.component.html
@@ -73,6 +73,21 @@
     </p-carousel>
   </div>
 
+  <h1>filtros</h1>
+
+  <!-- MultiSelect Subcategorías -->
+  <form [formGroup]="formGroup" class="mb-6">
+    <p-multiSelect
+      [options]="subcategories"
+      formControlName="selectedSubcategories"
+      optionLabel="name"
+      optionValue="slug"
+      placeholder="Selecciona subcategorías"
+      display="chip"
+      class="w-full"
+    ></p-multiSelect>
+  </form>
+
   <!-- Listado de productos -->
   <div
     class="rounded-2xl border shadow-lg p-4 transition-colors"
